unpackaged/main/default/objects/GT_Speaking_Engagement__c/GT_Speaking_Engagement__c.object-meta.xml
<CustomObject>
    <description>This will be the Speaking Engagement object for all accounts in Generic Template</description>
    <label>Speaking Engagement</label>
    <nameField>
        <displayFormat>SE-{00000}</displayFormat>
        <label>Speaking Engagement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaking Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>