unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Congress_Manager__c.field-meta.xml
<CustomField>
    <fullName>Congress_Manager__c</fullName>
    <label>Congress Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andrew Rolls</fullName>
            </value>
            <value>
                <fullName>Congress Manager 1</fullName>
            </value>
            <value>
                <fullName>Congress Manager 2</fullName>
            </value>
            <value>
                <fullName>Congress Manager 3</fullName>
            </value>
            <value>
                <fullName>Corrine Landolt</fullName>
            </value>
            <value>
                <fullName>Nadine Curtin</fullName>
                <label>Curtin, Nadine</label>
            </value>
            <value>
                <fullName>Jacqueline Campo</fullName>
            </value>
            <value>
                <fullName>Joe Walsh</fullName>
            </value>
            <value>
                <fullName>John Hasemann</fullName>
            </value>
            <value>
                <fullName>Kaitlyn Reynolds</fullName>
            </value>
            <value>
                <fullName>Erica Kepes</fullName>
                <label>Kepes, Erica</label>
            </value>
            <value>
                <fullName>Laurie Stein-Richards</fullName>
            </value>
            <value>
                <fullName>Ralph Lopez</fullName>
                <label>Lopez, Ralph</label>
            </value>
            <value>
                <fullName>Rebecca Baker</fullName>
            </value>
            <value>
                <fullName>Aleida Rosete</fullName>
                <label>Rosete, Aleida</label>
            </value>
            <value>
                <fullName>Dan Schuler</fullName>
                <label>Schuler, Dan</label>
            </value>
            <value>
                <fullName>Dawn Syntcha</fullName>
                <label>Syntcha, Dawn</label>
            </value>
            <value>
                <fullName>Andrea Throckmorton</fullName>
                <label>Throckmorton, Andrea</label>
            </value>
            <value>
                <fullName>Rose Marie Zarrillo</fullName>
                <label>Zarrillo, Rose Marie</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>