unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Event_Manager__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager__c</fullName>
    <label>Event Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Shawn McDonald</fullName>
            </value>
            <value>
                <fullName>Aisling Meehan</fullName>
            </value>
            <value>
                <fullName>Caitlin Ferdyn</fullName>
            </value>
            <value>
                <fullName>Nicole Brown</fullName>
            </value>
            <value>
                <fullName>Lisa Mahan</fullName>
            </value>
            <value>
                <fullName>Michael Clearey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>