unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Event_Manager_Phone_Auto__c.field-meta.xml
<CustomField>
    <fullName>Event_Manager_Phone_Auto__c</fullName>
    <formula>IF((TEXT(Event_Manager__c) == &quot;Shawn McDonald&quot;),&quot;(603) 610-3301&quot;,
IF((TEXT(Event_Manager__c) == &quot;Aisling Meehan&quot;),&quot;(603) 610-3303&quot;,
IF((TEXT(Event_Manager__c) == &quot;Caitlin Ferdyn&quot;),&quot;(603) 610-3284&quot;,
IF((TEXT(Event_Manager__c) == &quot;Nicole Brown&quot;),&quot;(603) 610-3209&quot;,
IF((TEXT(Event_Manager__c) == &quot;Lisa Mahan&quot;),&quot;(603) 610-3268&quot;,
IF((TEXT(Event_Manager__c) == &quot;Michael Clearey&quot;),&quot;(603) 610-3702&quot;,
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Manager Phone</label>
    <type>Text</type>
</CustomField>