unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Meal_included_with_Speaking_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Meal_included_with_Speaking_Engagement__c</fullName>
    <label>Meal included with Speaking Engagement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breakfast</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Dinner</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>