unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Speaking Engagement Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>