unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Session_Title4__c.field-meta.xml
<CustomField>
    <fullName>Session_Title4__c</fullName>
    <label>Session Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>