unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Speaker_3__c.field-meta.xml
<CustomField>
    <fullName>Speaker_3__c</fullName>
    <label>Speaker/Panelist</label>
    <length>30</length>
    <type>Text</type>
</CustomField>