unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Speaking_Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Engagement_Date__c</fullName>
    <label>Speaking Engagement Date</label>
    <type>Date</type>
</CustomField>