unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Speaking_Engagement_End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Engagement_End_Date_Time__c</fullName>
    <label>Speaking Engagement End Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>