unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Speaking_Engagement_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Engagement_End_Time__c</fullName>
    <label>Speaking Engagement End Time</label>
    <type>Time</type>
</CustomField>