unpackaged/main/default/objects/GT_Speaking_Engagement__c/fields/Speaking_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Speaking_Engagement_Type__c</fullName>
    <label>Speaking Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Breakout session</fullName>
            </value>
            <value>
                <fullName>Education Session speaker</fullName>
            </value>
            <value>
                <fullName>Keynote speaker</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Panel speaker</fullName>
            </value>
            <value>
                <fullName>Product Theater</fullName>
            </value>
            <value>
                <fullName>Sales session</fullName>
            </value>
            <value>
                <fullName>Scientific Posters</fullName>
            </value>
            <value>
                <fullName>Symposia</fullName>
            </value>
            <value>
                <fullName>Symposium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>