unpackaged/main/default/objects/GT_Speaking_Engagement__c/recordTypes/Speaking_Engagement_CC.recordType-meta.xml
<RecordType>
    <fullName>Speaking_Engagement_CC</fullName>
    <active>true</active>
    <description>Speaking Engagement for CC</description>
    <label>Speaking Engagement CC</label>
</RecordType>