unpackaged/main/default/objects/GT_Speaking_Engagement__c/recordTypes/Speaking_Engagement_GT.recordType-meta.xml
<RecordType>
    <fullName>Speaking_Engagement_GT</fullName>
    <active>true</active>
    <description>Speaking Engagement for GT</description>
    <label>Speaking Engagement GT</label>
</RecordType>