unpackaged/main/default/objects/GT_Speaking_Engagement__c/recordTypes/Speaking_Engagement_Merck.recordType-meta.xml
<RecordType>
    <fullName>Speaking_Engagement_Merck</fullName>
    <active>true</active>
    <label>Speaking Engagement Merck</label>
</RecordType>