unpackaged/main/default/objects/GT_Speaking_Engagement__c/recordTypes/Speaking_Engagement_NNI.recordType-meta.xml
<RecordType>
    <fullName>Speaking_Engagement_NNI</fullName>
    <active>true</active>
    <description>Speaking Engagement for NNI</description>
    <label>Speaking Engagement NNI</label>
</RecordType>