unpackaged/main/default/objects/GT_Speaking_Engagement__c/recordTypes/Speaking_Engagement_Pharma.recordType-meta.xml
<RecordType>
    <fullName>Speaking_Engagement_Pharma</fullName>
    <active>true</active>
    <label>Speaking Engagement Pharma</label>
</RecordType>