unpackaged/main/default/objects/GT_Speaking_Engagement__c/recordTypes/Speaking_Engagement_Sig_Sauer.recordType-meta.xml
<RecordType>
    <fullName>Speaking_Engagement_Sig_Sauer</fullName>
    <active>true</active>
    <label>Speaking Engagement Sig Sauer</label>
</RecordType>